# boggle-solver

./: Dockerfile  Makefile  README.md
frontend/: Makefile  index.html
frontend/src/: Main.elm
server/: Makefile  README.md  boggle-solver.cabal  rstudio-exercise.cabal  sample-req  stack.yaml
server/src/: App.hs  Boggle.hs  Server.hs
